--- a/app/templates/edit-contact.html
+++ b/app/templates/edit-contact.html
@@ -6,7 +6,7 @@
       <div class="card card-body">
         <form action="/update/{{contact.id}}" method="POST">
           <div class="form-group">
-            <input type="text" name="fullname" value="{{contact.fullname}}" class="form-control">
+            <input type="text" name="name" value="{{contact.name}}" class="form-control">
           </div>
           <div class="form-group">
             <input type="text" name="phone" value="{{contact.phone}}" class="form-control">
