--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
       <div class="card card-body">
         <form action="{{url_for('contacts.add_contact')}}" method="POST">
           <div class="form-group">
-            <input type="text" class="form-control" name="fullname" placeholder="FullName">
+            <input type="text" class="form-control" name="name" placeholder="Name">
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="email" placeholder="Email">
@@ -37,7 +37,7 @@
         <thead>
           <tr>
             <td>ID</td>
-            <td>fullname</td>
+            <td>name</td>
             <td>email</td>
             <td>phone</td>
             <td>Operations</td>
@@ -47,7 +47,7 @@
           {% for contact in contacts %}
           <tr>
             <td>{{contact.id}}</td>
-            <td>{{contact.fullname}}</td>
+            <td>{{contact.name}}</td>
             <td>{{contact.email}}</td>
             <td>{{contact.phone}}</td>
             <td>
